Sat Sep 13 15:56:13 CDT 2003 Adam Heath <doogie@debian.org>

  * automake/tools.m4, dselect/Makefile.in, methods/disk.setup,
    scripts/dpkg-parsechangelog.pl, scripts/dpkg-source.pl: Apply patch to
    make dpkg work with POSIX 1003.1-2001.

Sat Sep 13 15:40:39 CDT 2003 Adam Heath <doogie@debian.org>

  * lib/database.c: Apply patch to change hashing function, and increase
    bin size, for the package database.

Sat Sep 13 15:20:56 CDT 2003 Adam Heath <doogie@debian.org>

  * lib/enquiry.c, scripts/dpkg-architecture.pl: dpkg --print-architecture
    now does gcc -dumpmachine instead of --print-libgcc-file-name.

Sat Sep 13 14:38:55 CDT 2003 Adam Heath <doogie@debian.org>

  * debian/dpkg-doc.postinst: Add set -e.

Sat Sep 13 14:36:37 CDT 2003 Adam Heath <doogie@debian.org>

  * lib/parse.c: Fix inverted test of eof in parsedb, while looking for eof
    after field name.

Sat Sep 13 14:34:10 CDT 2003 Adam Heath <doogie@debian.org>

  * scripts/update-alternatives.pl: Fix inversion test of $state against
    'expected' when removing an alternative.

Sat Sep 13 14:31:22 CDT 2003 Adam Heath <doogie@debian.org>

  * lib/startup.c, lib/Makefile.in, include/dpkg.h.in: Change
    standard_startup and standard_shutdown into macros.

Sat Sep 13 14:24:14 CDT 2003 Adam Heath <doogie@debian.org>

  * scripts/install-info.pl: Apply patch, to handle missing infodir.bak,
    and empty files.

Sat Sep 13 14:21:13 CDT 2003 Adam Heath <doogie@debian.org>

  * config.sub, config.guess: Updated

Sat Sep 13 14:20:12 CDT 2003 Adam Heath <doogie@debian.org>

  * debian/control: Add build-depends on sgml-base, and increase
    gettext build-depends to 0.12.1-3.

Sat Sep 13 14:18:02 CDT 2003 Adam Heath <doogie@debian.org>

  * configure.in:
    * Change AC_SYS_SIGLIST_DECLARED to AC_DECL_SYS_SIGLIST.
    * Add locale.h to list of checked headers.
    * Pass external to AM_GNU_GETTEXT

Sat Sep 13 13:57:22 CDT 2003 Adam Heath <doogie@debian.org>
