@@ -26,6 +26,9 @@ dpkg (1.10.11) unstable; urgency=low
   * Paul Eggert <eggert@CS.UCLA.EDU>:
     Apply patch to make dpkg work with POSIX 1003.1-2001.  Closes:
     #204894
+  * Joey Hess <joeyh@debian.org>:
+    Fix "stripping trailing /" message from dpkg-statoverride.  Closes:
+    #203782
 
  -- Wichert Akkerman <debian@extern.wiggy.net>  UNRELEASED
 
