@@ -1,3 +1,8 @@
+Sat Sep 13 16:04:37 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * scripts/dpkg-statoverride.pl: Fix "stripping trailing /" message from
+    dpkg-statoverride.
+
 Sat Sep 13 15:56:13 CDT 2003 Adam Heath <doogie@debian.org>
 
   * automake/tools.m4, dselect/Makefile.in, methods/disk.setup,
